--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env:
+          TURBO_TOKEN: ${{ secrets.VERCEL_ACCESS_TOKEN }}
+          TURBO_TEAM: die-goncalves
 
       - name: Deploy storybook
         working-directory: ./packages/docs
