--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-toast": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.0.2",
     "@stitches/react": "^1.2.8",
-    "phosphor-react": "^1.4.1"
+    "phosphor-react": "^1.4.1",
+    "react-select": "^5.6.0"
   }
 }
