--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -19,6 +19,7 @@
     "@ignite-ui/tokens": "*",
     "@ignite-ui/ts-config": "*",
     "@types/react": "^18.0.21",
+    "@types/react-calendar": "^3.5.3",
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "tsup": "^6.3.0",
@@ -35,7 +36,9 @@
     "@radix-ui/react-toast": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.0.2",
     "@stitches/react": "^1.2.8",
+    "date-fns": "^2.29.3",
     "phosphor-react": "^1.4.1",
+    "react-calendar": "^4.0.0",
     "react-select": "^5.6.0"
   }
 }
